# automated-rating-curve

./: .gitignore  .readthedocs.yaml  Automated_Rating_Curve_Generator.py  Automated_Rating_Curve_Generator.py.bak  Automated_Rating_Curve_Generator_20240515.py  Automated_Rating_Curve_Generator_20240916 (2).py  Automated_Rating_Curve_Generator_20240916.py  Bathymetry_Method2_BankLocation.xlsx  Curves_To_GeoJSON.py  README.md  environment.yaml  environment.yml  environment_ARC.yml  example_step1.py  example_step2.py  example_step4.py  mkdocs.yml  process_geospatial_data.py  pyproject.toml  streamflow_processing.py
docs/: api.md  bathymetry.md  getting_started.md  index.md  installation.md  license.md  making_inputs_for_fist.md  miscellaneous.md  model_input_file.md  neuse_river_flooding.md  outputs.md  produce_geospatial_inputs.md  produce_streamflow_inputs.md  requirements.txt  running_arc.md  stream_slope_methods.md  testing_unit_tests.md
examples/: example_step1.py  example_step2.py  example_step3.py  example_step4.py
src/arc/: Automated_Rating_Curve_Generator.py  Automated_Rating_Curve_Generator.py.bak  Create_GeoJSON.py  Curve2Flood.py  Curves_To_GeoJSON.py  __init__.py  _log.py  arc.py  cross_section.py  example_step3.py  hydraulic_data.py  process_geospatial_data.py  streamflow_processing.py
src/arc_byu/: Automated_Rating_Curve_Generator.py  Curve2Flood.py  __init__.py  arc.py  environment_ARC.yml  process_geospatial_data.py
testing/: unit_test_with_angle.py  unit_test_with_geographic.py  unit_test_with_shapes.py  unit_test_with_slope.py  unit_test_with_slope_and_angle.py
