 [build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "arc"
description = "Wrapper package for using ARC, by Mike Follum -> https://github.com/MikeFHS/automated-rating-curve/tree/main"
dynamic = ["version"]
dependencies = [
  "numpy",
  "pandas",
  "geopandas",
  "gdal",
  "pip",
  "netCDF4",
  "xarray",
  "geojson",
  "networkx",
  "dask",
  "numba",
  "scipy",
  "tqdm",
  "pyproj",
  "fiona",
  "netcdf4",
  "shapely",
  "networkx",
  "s3fs"
]
requires-python = ">= 3.10"
authors = [
    {name = "Mike Follum", email = "mike@follumhydro.com"},
    {name = "Joseph Gutenson", email = "joseph@follumhydro.com"},
    {name = "Drew Loney", email = "drew@follumhydro.com"},
    {name = "Louis 'Ricky' Rosas", email = "lrr43@byu.edu"},
]
maintainers = [
    {name = "Mike Follum", email = "mike@follumhydro.com"},
    {name = "Joseph Gutenson", email = "joseph@follumhydro.com"},
    {name = "Drew Loney", email = "drew@follumhydro.com"},
    {name = "Louis 'Ricky' Rosas", email = "lrr43@byu.edu"},
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
arc = "arc.arc:_main"
curve-to-geojson-stream-vector = "arc.Curves_To_GeoJSON:main_Run_Main_Curve_to_GEOJSON_Program_Stream_Vector"
write-seed-stream-raster = "arc.Curves_To_GeoJSON:main_write_seed"
